[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawretriever"
version = "0.1.0"
description = "Modular RAG pipeline with OpenClaw integration"
dependencies = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "openclaw>=0.1.0",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
